Add Google AdSense meta tag to all pages

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="description" content="About Counta Scanner - Learn about our team, mission, and vision for the advanced barcode scanner app.">
     <meta name="keywords" content="Counta Scanner about, barcode scanner app developer, Counta team, barcode scanner company, Counta Scanner information">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-6416316182049090">
     <title>About Us - Counta Scanner</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
