--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="Counta Scanner - Advanced Barcode Scanner App">
     <meta property="og:description" content="Complete solution for barcode scanning and connecting phone to computer. Fast, accurate, and easy to use.">
     <meta property="og:type" content="website">
+    <meta name="google-adsense-account" content="ca-pub-6416316182049090">
     <title>Counta Scanner - Advanced Barcode Scanner App</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
