--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Contact Counta Scanner - Get in touch with our team for support, questions, or feedback about our barcode scanner app.">
     <meta name="keywords" content="Counta Scanner contact, barcode scanner support, Counta Scanner help, contact Counta team, barcode app support">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-6416316182049090">
     <title>Contact Us - Counta Scanner</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
