--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Privacy Policy for Counta Scanner - Learn how we protect your data and privacy when using our barcode scanner app.">
     <meta name="keywords" content="Counta Scanner privacy policy, barcode scanner privacy, data protection, user privacy, app privacy policy, Counta Scanner data security">
     <meta name="robots" content="index, follow">
+    <meta name="google-adsense-account" content="ca-pub-6416316182049090">
     <title>Privacy Policy - Counta Scanner</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
