--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,17 @@
     <meta name="description" content="Contact Counta Scanner - Get in touch with our team for support, questions, or feedback about our barcode scanner app.">
     <meta name="keywords" content="Counta Scanner contact, barcode scanner support, Counta Scanner help, contact Counta team, barcode app support">
     <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Contact Us - Counta Scanner">
+    <meta property="og:description" content="Contact Counta Scanner - Get in touch with our team for support, questions, or feedback about our barcode scanner app.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://counta-scanner.online/contact.html">
+    <meta property="og:image" content="https://counta-scanner.online/logo.png">
+    <meta property="og:site_name" content="Counta Scanner">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Us - Counta Scanner">
+    <meta name="twitter:image" content="https://counta-scanner.online/logo.png">
     <meta name="google-adsense-account" content="ca-pub-6416316182049090">
+    <link rel="icon" type="image/png" href="/logo.png">
     <title>Contact Us - Counta Scanner</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
