--- a/index.html
+++ b/index.html
@@ -11,8 +11,38 @@
     <meta property="og:title" content="Counta Scanner - Advanced Barcode Scanner App">
     <meta property="og:description" content="Complete solution for barcode scanning and connecting phone to computer. Fast, accurate, and easy to use.">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://counta-scanner.online/">
+    <meta property="og:image" content="https://counta-scanner.online/logo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Counta Scanner">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Counta Scanner - Advanced Barcode Scanner App">
+    <meta name="twitter:description" content="Complete solution for barcode scanning and connecting phone to computer. Fast, accurate, and easy to use.">
+    <meta name="twitter:image" content="https://counta-scanner.online/logo.png">
     <meta name="google-adsense-account" content="ca-pub-6416316182049090">
+    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <title>Counta Scanner - Advanced Barcode Scanner App</title>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Counta Scanner",
+      "url": "https://counta-scanner.online",
+      "logo": "https://counta-scanner.online/logo.png",
+      "description": "Advanced barcode scanner app for phones and computers. Fast, accurate barcode scanning with direct connection to PC.",
+      "sameAs": [
+        "https://www.facebook.com/share/16Pi2bEjjv/",
+        "https://www.youtube.com/@CountaScanner"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "team@counta-scanner.online",
+        "contactType": "Customer Service"
+      }
+    }
+    </script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
