Enhance website for Google Search Console and AdSense compatibility - Add structured data (WebSite, SoftwareApplication, BreadcrumbList) - Add canonical URLs and alternate language links - Add theme-color and security headers - Improve robots.txt - Add .htaccess for performance optimization

--- a/index.html
+++ b/index.html
@@ -21,27 +21,102 @@
     <meta name="twitter:description" content="Complete solution for barcode scanning and connecting phone to computer. Fast, accurate, and easy to use.">
     <meta name="twitter:image" content="https://counta-scanner.online/logo.png">
     <meta name="google-adsense-account" content="ca-pub-6416316182049090">
+    <!-- Google Search Console Verification - Add your verification code here -->
+    <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" /> -->
+    <meta name="theme-color" content="#4A90E2">
+    <meta name="msapplication-TileColor" content="#4A90E2">
+    <link rel="canonical" href="https://counta-scanner.online/">
+    <link rel="alternate" hreflang="en" href="https://counta-scanner.online/">
+    <link rel="alternate" hreflang="ar" href="https://counta-scanner.online/?lang=ar">
+    <link rel="alternate" hreflang="x-default" href="https://counta-scanner.online/">
     <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="apple-touch-icon" href="/logo.png">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <title>Counta Scanner - Advanced Barcode Scanner App</title>
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Counta Scanner",
-      "url": "https://counta-scanner.online",
-      "logo": "https://counta-scanner.online/logo.png",
-      "description": "Advanced barcode scanner app for phones and computers. Fast, accurate barcode scanning with direct connection to PC.",
-      "sameAs": [
-        "https://www.facebook.com/share/16Pi2bEjjv/",
-        "https://www.youtube.com/@CountaScanner"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "email": "team@counta-scanner.online",
-        "contactType": "Customer Service"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Counta Scanner",
+        "url": "https://counta-scanner.online",
+        "logo": "https://counta-scanner.online/logo.png",
+        "description": "Advanced barcode scanner app for phones and computers. Fast, accurate barcode scanning with direct connection to PC.",
+        "sameAs": [
+          "https://www.facebook.com/share/16Pi2bEjjv/",
+          "https://www.youtube.com/@CountaScanner"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "email": "team@counta-scanner.online",
+          "contactType": "Customer Service",
+          "availableLanguage": ["English", "Arabic"]
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Counta Scanner",
+        "url": "https://counta-scanner.online",
+        "description": "Advanced barcode scanner app for phones and computers",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Counta Scanner",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://counta-scanner.online/logo.png"
+          }
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": {
+            "@type": "EntryPoint",
+            "urlTemplate": "https://counta-scanner.online/?q={search_term_string}"
+          },
+          "query-input": "required name=search_term_string"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Counta Scanner",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": ["Android", "Windows"],
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "ratingCount": "1250"
+        },
+        "description": "Advanced barcode scanner app for phones and computers. Fast, accurate barcode scanning with direct connection to PC via Wi-Fi or USB.",
+        "screenshot": "https://counta-scanner.online/logo.png",
+        "softwareVersion": "1.0.0",
+        "releaseNotes": "Initial release with advanced barcode scanning features",
+        "featureList": [
+          "Fast & Accurate Scanning",
+          "Direct Connection via Wi-Fi or USB",
+          "Auto Paste to Active Field",
+          "High Quality up to 4K",
+          "Support for Multiple Barcode Types"
+        ]
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://counta-scanner.online/"
+          }
+        ]
       }
-    }
+    ]
     </script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
