--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,50 @@
     <meta name="twitter:title" content="Contact Us - Counta Scanner">
     <meta name="twitter:image" content="https://counta-scanner.online/logo.png">
     <meta name="google-adsense-account" content="ca-pub-6416316182049090">
+    <meta name="theme-color" content="#4A90E2">
+    <link rel="canonical" href="https://counta-scanner.online/contact.html">
+    <link rel="alternate" hreflang="en" href="https://counta-scanner.online/contact.html">
+    <link rel="alternate" hreflang="ar" href="https://counta-scanner.online/contact.html?lang=ar">
+    <link rel="alternate" hreflang="x-default" href="https://counta-scanner.online/contact.html">
     <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="apple-touch-icon" href="/logo.png">
     <title>Contact Us - Counta Scanner</title>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "name": "Contact Us - Counta Scanner",
+      "description": "Contact Counta Scanner - Get in touch with our team for support, questions, or feedback about our barcode scanner app.",
+      "url": "https://counta-scanner.online/contact.html",
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://counta-scanner.online/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Contact Us",
+            "item": "https://counta-scanner.online/contact.html"
+          }
+        ]
+      },
+      "mainEntity": {
+        "@type": "Organization",
+        "name": "Counta Scanner",
+        "email": "team@counta-scanner.online",
+        "contactType": "Customer Service",
+        "sameAs": [
+          "https://www.facebook.com/share/16Pi2bEjjv/",
+          "https://www.youtube.com/@CountaScanner"
+        ]
+      }
+    }
+    </script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
