Fix sitemap.xml and robots.txt for Google - Update all logo references to counta-scannerq.jpg - Simplify sitemap.xml format - Clean robots.txt format

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:description" content="Complete solution for barcode scanning and connecting phone to computer. Fast, accurate, and easy to use.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://counta-scanner.online/">
-    <meta property="og:image" content="https://counta-scanner.online/logo.png">
+    <meta property="og:image" content="https://counta-scanner.online/counta-scannerq.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Counta Scanner">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Counta Scanner - Advanced Barcode Scanner App">
     <meta name="twitter:description" content="Complete solution for barcode scanning and connecting phone to computer. Fast, accurate, and easy to use.">
-    <meta name="twitter:image" content="https://counta-scanner.online/logo.png">
+    <meta name="twitter:image" content="https://counta-scanner.online/counta-scannerq.jpg">
     <meta name="google-adsense-account" content="ca-pub-6416316182049090">
     <!-- Google Search Console Verification - Add your verification code here -->
     <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" /> -->
@@ -29,8 +29,8 @@
     <link rel="alternate" hreflang="en" href="https://counta-scanner.online/">
     <link rel="alternate" hreflang="ar" href="https://counta-scanner.online/?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://counta-scanner.online/">
-    <link rel="icon" type="image/png" href="/logo.png">
-    <link rel="apple-touch-icon" href="/logo.png">
+    <link rel="icon" type="image/jpeg" href="/counta-scannerq.jpg">
+    <link rel="apple-touch-icon" href="/counta-scannerq.jpg">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <title>Counta Scanner - Advanced Barcode Scanner App</title>
     <script type="application/ld+json">
@@ -40,7 +40,7 @@
         "@type": "Organization",
         "name": "Counta Scanner",
         "url": "https://counta-scanner.online",
-        "logo": "https://counta-scanner.online/logo.png",
+        "logo": "https://counta-scanner.online/counta-scannerq.jpg",
         "description": "Advanced barcode scanner app for phones and computers. Fast, accurate barcode scanning with direct connection to PC.",
         "sameAs": [
           "https://www.facebook.com/share/16Pi2bEjjv/",
@@ -62,10 +62,10 @@
         "publisher": {
           "@type": "Organization",
           "name": "Counta Scanner",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://counta-scanner.online/logo.png"
-          }
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://counta-scanner.online/counta-scannerq.jpg"
+            }
         },
         "potentialAction": {
           "@type": "SearchAction",
@@ -93,7 +93,7 @@
           "ratingCount": "1250"
         },
         "description": "Advanced barcode scanner app for phones and computers. Fast, accurate barcode scanning with direct connection to PC via Wi-Fi or USB.",
-        "screenshot": "https://counta-scanner.online/logo.png",
+        "screenshot": "https://counta-scanner.online/counta-scannerq.jpg",
         "softwareVersion": "1.0.0",
         "releaseNotes": "Initial release with advanced barcode scanning features",
         "featureList": [
