--- a/contact.html
+++ b/contact.html
@@ -10,19 +10,19 @@
     <meta property="og:description" content="Contact Counta Scanner - Get in touch with our team for support, questions, or feedback about our barcode scanner app.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://counta-scanner.online/contact.html">
-    <meta property="og:image" content="https://counta-scanner.online/logo.png">
+    <meta property="og:image" content="https://counta-scanner.online/counta-scannerq.jpg">
     <meta property="og:site_name" content="Counta Scanner">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Contact Us - Counta Scanner">
-    <meta name="twitter:image" content="https://counta-scanner.online/logo.png">
+    <meta name="twitter:image" content="https://counta-scanner.online/counta-scannerq.jpg">
     <meta name="google-adsense-account" content="ca-pub-6416316182049090">
     <meta name="theme-color" content="#4A90E2">
     <link rel="canonical" href="https://counta-scanner.online/contact.html">
     <link rel="alternate" hreflang="en" href="https://counta-scanner.online/contact.html">
     <link rel="alternate" hreflang="ar" href="https://counta-scanner.online/contact.html?lang=ar">
     <link rel="alternate" hreflang="x-default" href="https://counta-scanner.online/contact.html">
-    <link rel="icon" type="image/png" href="/logo.png">
-    <link rel="apple-touch-icon" href="/logo.png">
+    <link rel="icon" type="image/jpeg" href="/counta-scannerq.jpg">
+    <link rel="apple-touch-icon" href="/counta-scannerq.jpg">
     <title>Contact Us - Counta Scanner</title>
     <script type="application/ld+json">
     {
