--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         <div class="step-content">
                             <p data-i18n="step2Desc">Download the Counta Scanner application installer for Windows.</p>
                             <div class="step-actions">
-                                <a href="#" class="btn btn-primary" id="downloadAppBtn">
+                                <a href="https://drive.google.com/uc?export=download&id=1xl4zqpXbv5ynCD_V2uX6abBMqJ3P_6C9" target="_blank" class="btn btn-primary" id="downloadAppBtn">
                                     <i class="fas fa-download"></i>
                                     <span data-i18n="downloadApplication">Download Application</span>
                                 </a>
@@ -416,25 +416,6 @@
                         </div>
                     </div>
 
-                    <!-- Step 3: Requirements -->
-                    <div class="download-step">
-                        <div class="step-header">
-                            <div class="step-number">3</div>
-                            <h3 data-i18n="step3Title">Install Requirements</h3>
-                        </div>
-                        <div class="step-content">
-                            <p data-i18n="step3Desc">After installing the application, download and run the requirements installer to set up all necessary dependencies.</p>
-                            <div class="step-actions">
-                                <a href="#" class="btn btn-primary" id="downloadRequirementsBtn">
-                                    <i class="fas fa-download"></i>
-                                    <span data-i18n="downloadRequirements">Download Requirements Installer</span>
-                                </a>
-                            </div>
-                            <div class="step-info">
-                                <p><i class="fas fa-info-circle"></i> <span data-i18n="requirementsInfo">Run this installer after installing the main application</span></p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
