--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <i class="fab fa-android"></i>
                     </div>
                     <h3>Android</h3>
-                    <p data-i18n="androidDesc">Available on Google Play</p>
+                    <p data-i18n="androidDesc">Available for download</p>
                     <a href="#" class="btn btn-download" id="androidDownload">
                         <i class="fas fa-download"></i>
                         <span data-i18n="downloadAndroid">Download for Android</span>
@@ -402,20 +402,64 @@
                             <div class="step-number">2</div>
                             <h3 data-i18n="step2Title">Download Application</h3>
                         </div>
-                        <div class="step-content">
-                            <p data-i18n="step2Desc">Download the Counta Scanner application installer for Windows.</p>
-                            <div class="step-actions">
-                                <a href="https://drive.google.com/uc?export=download&id=1xl4zqpXbv5ynCD_V2uX6abBMqJ3P_6C9" target="_blank" class="btn btn-primary" id="downloadAppBtn">
-                                    <i class="fas fa-download"></i>
-                                    <span data-i18n="downloadApplication">Download Application</span>
-                                </a>
+                            <div class="step-content">
+                                <p data-i18n="step2Desc">Download the Counta Scanner application installer for Windows.</p>
+                                <div class="step-actions">
+                                    <div class="download-servers">
+                                        <a href="https://drive.google.com/uc?export=download&id=1xl4zqpXbv5ynCD_V2uX6abBMqJ3P_6C9" target="_blank" class="btn btn-primary" id="downloadAppBtn">
+                                            <i class="fab fa-google-drive"></i>
+                                            <span data-i18n="downloadDrive">Google Drive</span>
+                                        </a>
+                                        <a href="https://mega.nz/file/YAxV0KBR#D3R8CJ-G2aTe42JCCqQwCREI12AuTxEZZyx2S_MX3VY" target="_blank" class="btn btn-primary" id="downloadAppMegaBtn">
+                                            <i class="fas fa-cloud-download-alt"></i>
+                                            <span data-i18n="downloadMega">MEGA</span>
+                                        </a>
+                                        <a href="https://www.mediafire.com/file/qrrpgx63b7hv04e/counta-scanner-windows.zip/file" target="_blank" class="btn btn-primary" id="downloadAppMediaFireBtn">
+                                            <i class="fas fa-server"></i>
+                                            <span data-i18n="downloadMediaFire">MediaFire</span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="step-info">
+                                    <p><i class="fas fa-info-circle"></i> <span data-i18n="appInfo">File size: ~150 MB | Compatible with Windows 8, 8.1, 10, and 11</span></p>
+                                </div>
                             </div>
-                            <div class="step-info">
-                                <p><i class="fas fa-info-circle"></i> <span data-i18n="appInfo">File size: ~150 MB | Compatible with Windows 8, 8.1, 10, and 11</span></p>
-                            </div>
-                        </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Android Download Modal -->
+    <div id="androidDownloadModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 data-i18n="androidDownloadTitle">Download Counta Scanner for Android</h2>
+                <button class="modal-close" id="closeAndroidModal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="download-servers-modal">
+                    <a href="https://drive.google.com/uc?export=download&id=15wG8cCTbtLJJfZL5Yh3PemXXgaHE0bob" target="_blank" class="btn btn-primary server-btn">
+                        <i class="fab fa-google-drive"></i>
+                        <span data-i18n="downloadDrive">Google Drive</span>
+                    </a>
+                    <a href="https://mega.nz/file/AQw0iaZL#4A64YU5PSYCKOrG2bB5rNx80FpAA_2UNUxM5OzqqgF0" target="_blank" class="btn btn-primary server-btn">
+                        <i class="fas fa-cloud-download-alt"></i>
+                        <span data-i18n="downloadMega">MEGA</span>
+                    </a>
+                    <a href="https://www.mediafire.com/file/0kwo1ajdafupgu5/counta+scanner.apk/file" target="_blank" class="btn btn-primary server-btn">
+                        <i class="fas fa-server"></i>
+                        <span data-i18n="downloadMediaFire">MediaFire</span>
+                    </a>
+                    <button class="btn btn-secondary server-btn" disabled>
+                        <i class="fab fa-google-play"></i>
+                        <span data-i18n="downloadPlayStore">Google Play Store</span>
+                        <span class="coming-soon" data-i18n="comingSoon">(Coming Soon)</span>
+                    </button>
+                </div>
+                <div class="download-info-modal">
+                    <p><i class="fas fa-info-circle"></i> <span data-i18n="androidInfo">Choose a download server to get the APK file</span></p>
                 </div>
             </div>
         </div>
