Update Android download links: MediaFire and Mega

--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
                     <li><a href="privacy.html" class="nav-link" data-i18n="navPrivacy">Privacy Policy</a></li>
                     <li><a href="about.html" class="nav-link active" data-i18n="navAbout">About Us</a></li>
                     <li><a href="contact.html" class="nav-link" data-i18n="navContact">Contact</a></li>
+                    <li><a href="subscriptions.html" class="nav-link" data-i18n="navSubscriptions">Subscriptions</a></li>
                 </ul>
                 <div class="nav-controls">
                     <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
@@ -180,6 +181,7 @@
                         <li><a href="privacy.html" data-i18n="navPrivacy">Privacy Policy</a></li>
                         <li><a href="about.html" data-i18n="navAbout">About Us</a></li>
                         <li><a href="contact.html" data-i18n="navContact">Contact</a></li>
+                        <li><a href="subscriptions.html" data-i18n="navSubscriptions">Subscriptions</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
