--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <li><a href="privacy.html" class="nav-link" data-i18n="navPrivacy">Privacy Policy</a></li>
                     <li><a href="about.html" class="nav-link" data-i18n="navAbout">About Us</a></li>
                     <li><a href="contact.html" class="nav-link" data-i18n="navContact">Contact</a></li>
+                    <li><a href="subscriptions.html" class="nav-link" data-i18n="navSubscriptions">Subscriptions</a></li>
                 </ul>
                 <div class="nav-controls">
                     <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">
@@ -345,6 +346,7 @@
                         <li><a href="privacy.html" data-i18n="navPrivacy">Privacy Policy</a></li>
                         <li><a href="about.html" data-i18n="navAbout">About Us</a></li>
                         <li><a href="contact.html" data-i18n="navContact">Contact</a></li>
+                        <li><a href="subscriptions.html" data-i18n="navSubscriptions">Subscriptions</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -444,11 +446,11 @@
                         <i class="fab fa-google-drive"></i>
                         <span data-i18n="downloadDrive">Google Drive</span>
                     </a>
-                    <a href="https://mega.nz/file/AQw0iaZL#4A64YU5PSYCKOrG2bB5rNx80FpAA_2UNUxM5OzqqgF0" target="_blank" class="btn btn-primary server-btn">
+                    <a href="https://mega.nz/file/NdpABb5T#CHwP_AHN44bWCu60wZEXvJQD3wyJ-gsRLXD8ug7qtIw" target="_blank" class="btn btn-primary server-btn">
                         <i class="fas fa-cloud-download-alt"></i>
                         <span data-i18n="downloadMega">MEGA</span>
                     </a>
-                    <a href="https://www.mediafire.com/file/0kwo1ajdafupgu5/counta+scanner.apk/file" target="_blank" class="btn btn-primary server-btn">
+                    <a href="https://www.mediafire.com/file/96g84ruc31ehkdf/counta-scanner.apk/file" target="_blank" class="btn btn-primary server-btn">
                         <i class="fas fa-server"></i>
                         <span data-i18n="downloadMediaFire">MediaFire</span>
                     </a>
